Adapted frontend with generator
